metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__AbsoluteDiscount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AbsoluteDiscount__c</fullName>
    <description>The absolute discount for this item in the cart</description>
    <label>Absolute Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>