metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__AvailabilityMessage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AvailabilityMessage__c</fullName>
    <description>The availability message copied from the product inventory record when this item was added to the cart.</description>
    <label>Availability Message</label>
    <type>TextArea</type>
</CustomField>