metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Cart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Cart__c</fullName>
    <description>Reference to the parent cart.</description>
    <label>Cart</label>
    <referenceTo>ccrz__E_Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>E_CartItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>