metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__CartItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartItemGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Order Item Group that the item belongs to. Used for Line Level Independence.</description>
    <label>Cart Item Group</label>
    <referenceTo>ccrz__E_CartItemGroup__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>E_CartItems</relationshipName>
    <type>Lookup</type>
</CustomField>