metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__cartItemType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__cartItemType__c</fullName>
    <description>Defines the type of the line item.  Either Major (main line item), Minor (child line item), or Coupon.</description>
    <label>cart item type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
                <default>true</default>
                <label>Major</label>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>