metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED</description>
    <label>Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>E_CartItems</relationshipName>
    <type>Lookup</type>
</CustomField>