metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Coupon__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a Coupon applied to this line item.</description>
    <label>Coupon</label>
    <referenceTo>ccrz__E_Coupon__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>E_CartItem2</relationshipName>
    <type>Lookup</type>
</CustomField>