metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__DisplayProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product used to display the name in the cart and link to product detail page</description>
    <label>Display Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC Cart Items (Display Product)</relationshipLabel>
    <relationshipName>CC_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>