metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Is_Subscription_Selected__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Is_Subscription_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED</description>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>Is Subscription Selected</label>
    <type>Checkbox</type>
</CustomField>