metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__ItemTotal__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ItemTotal__c</fullName>
    <formula>ccrz__AdjustmentAmount__c  +  ccrz__SubAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>