metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__OriginalItemPrice__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OriginalItemPrice__c</fullName>
    <description>The original price of the item before any modifiers are applied</description>
    <label>Original Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>