metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__ParentCartItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentCartItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For minor line items this is the reference to the parent Major line item.</description>
    <label>Parent Cart Item</label>
    <referenceTo>ccrz__E_CartItem__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>