metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__PercentDiscount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PercentDiscount__c</fullName>
    <description>The percentage discount for this item in the cart</description>
    <label>Percent Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>