metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__PrimaryAttr__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PrimaryAttr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary CC Attribute selected for the related product</description>
    <label>Primary Attribute</label>
    <referenceTo>ccrz__E_Attribute__c</referenceTo>
    <relationshipLabel>CC Cart Items</relationshipLabel>
    <relationshipName>ccCartItemsPrim</relationshipName>
    <type>Lookup</type>
</CustomField>