metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RequestDate__c</fullName>
    <description>Requested date for the line item.</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>