metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__SelectedAttr__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SelectedAttr__c</fullName>
    <description>Attributes Selected for the Cart Item&apos;s Related Product. Data is in JSON Form.</description>
    <label>Selected Attributes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>