metadata/force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__SubAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubAmount__c</fullName>
    <description>Sub Amount total for the line.  Typically will be Price times Quantity.</description>
    <label>Sub Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>